# trpg_server

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Convention.cs  TRPG.Server.sln  generate.bat  generate.py
FlatBuf/: Generate.bat  Generate.py
FlatBuf/In/: Common.fbs
Sources/TRPG.Client/: Main.cs  TRPG.Client.csproj  TerminalApp.cs
Sources/TRPG.Common/: AtomicFlag.cs  ConnectionIdGenerator.cs  GuidGenerator.cs  SystemConfig.cs  TRPG.Common.csproj  Time.cs  TokenBucket.cs
Sources/TRPG.Core/: ChatService.cs  ConnectionService.cs  NetworkingMethod.cs  TRPG.Core.csproj
Sources/TRPG.Core.Generators/: NetworkingMethodGenerator.cs  TRPG.Core.Generators.csproj
Sources/TRPG.Development/: Main.cs  TRPG.Development.csproj
Sources/TRPG.Networking/: Connection.cs  NetResult.cs  PacketContext.cs  Strand.cs  TRPG.Networking.csproj  Tcp.cs  TcpClient.cs  TcpServer.cs
Sources/TRPG.Protocol/: Packet.cs  TRPG.Protocol.csproj
Sources/TRPG.Runtime/: Main.cs  TRPG.Runtime.csproj
Sources/TRPG.Server.Dashboard.Backend/: Main.cs
Sources/TRPG.Server.Dashboard.Backend/Properties/: launchSettings.json
Sources/TRPG.Server.Dashboard.Frontend/: README.md  index.html  package-lock.json  package.json
Sources/TRPG.Server.Dashboard.Frontend/src/: App.css  App.tsx  index.css
Sources/TRPG.Server.Dashboard.Frontend/src/api/: serverStatus.ts
Sources/TRPG.Server.Dashboard.Frontend/src/components/: ConnectionSettings.tsx  Dashboard.tsx  LogViewer.tsx  MetricsPanel.tsx  ServerStatus.tsx  StatusBadge.tsx
Sources/TRPG.Server.Development/: Main.cs
flatbuf/in/: admin.fbs  gameplay.fbs  packet.fbs
runtime/: CMakeLists.txt  CMakePresets.json  generate.py  vcpkg.json
runtime/flatbuf/in/: packet.fbs
runtime/src/net.common/: CMakeLists.txt  connection_id_generator.cpp  connection_id_generator.h  global_singleton.h  guid_generator.cpp  guid_generator.h  log.cpp  log.h  system_config.h  thread_local_singleton.h  time.cpp  time.h  token_bucket.cpp  token_bucket.h
runtime/src/net.core/: connection.cpp  connection.h  packet.cpp  packet.h  service.h  tcp.cpp  tcp.h  tcp_server.cpp
runtime/src/net.server/: CMakeLists.txt  main.cpp
src/net.common/: CMakeLists.txt  connection_id_generator.cpp  connection_id_generator.h  global_singleton.cpp  global_singleton.h  guid_generator.cpp  guid_generator.h  system_config.cpp  thread_local_singleton.cpp  time.cpp  time.h  token_bucket.cpp
src/net.core/: CMakeLists.txt  connection.cpp  connection.h  tcp.cpp  tcp.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
src/net.server/: main.cpp
tests/: trpg_server_test.sln
tests/src/net.common/: GlobalSingleton.cs  Log.cs  SystemConfig.cs  Time.cs
tests/src/net.core/: Connection.cs  NetResult.cs  Tcp.cs  net.core.csproj
tests/src/net.server.test/: Main.cs  Shell.cs  Terminal.cs  net.server.test.csproj
